sumo/tests/sumo/errors/network/edge/lane/root__edge__lane__empty21/errors.sumo
Error: Shape of lane '2_0' is broken.
 Can not build according edge.
Error: An unknown lane ('2_0') was tried to be set as incoming to junction '3'.
Error: An unknown lane ('2_0') should be set as a follower for lane '1_0'.
Error: An unknown lane ('2_1') should be set as a follower for lane '1_1'.
Error: Trying to close connections of an unknown lane ('2_0').
Error: Trying to close connections of an unknown lane ('2_1').
Quitting (on error).
